--- a/estilosPiola/estilos.css
+++ b/estilosPiola/estilos.css
@@ -68,7 +68,7 @@ body {
   font-size: 16px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  background: #ececec;
+  background: rgb(236, 236, 236);
 }
 
 .preVisualizador {
@@ -118,7 +118,7 @@ body {
   max-width: 1000px;
 }
 .preVisualizador .fila .contPrev .contenedorMedia .contPrevArch .prevArchivo {
-  background: #353535;
+  background: rgb(53, 53, 53);
   border-radius: 10px;
   width: 200px;
   height: 200px;
@@ -149,7 +149,7 @@ header .fila {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  border-bottom: #6d71c36b solid 1px;
+  border-bottom: rgba(109, 113, 195, 0.4196078431) solid 1px;
 }
 header .fila .titulo a {
   color: #159eee;
@@ -289,7 +289,7 @@ main .contenedorPrincipal .seccionDash .fila .progresoSubida {
 main .contenedorPrincipal .seccionDash .fila .progresoSubida .contenedorProgreso {
   width: 100%;
   max-width: 200px;
-  background: #c7c7c7;
+  background: rgb(199, 199, 199);
   border-radius: 50px;
 }
 main .contenedorPrincipal .seccionDash .fila .progresoSubida .contenedorProgreso #indicadorPorc {
@@ -436,6 +436,8 @@ main .contenedorPrincipal .seccionDash .fila .contenedorPanelDeArchivos .contene
 main .contenedorPrincipal .seccionDash .fila .contenedorPanelDeArchivos .contenedorArchivos .contenedorPadding .contenedorArchivo .infoArchivo .contNombre .nombreArchivo {
   width: 90%;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 main .contenedorPrincipal .seccionDash .fila .contenedorPanelDeArchivos .contenedorArchivos .contenedorPadding .contenedorArchivo .infoArchivo .contNombre .iconoFA {
   width: 10%;
